WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49536
SVGFEImageElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=49536
Summary
SVGFEImageElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-11-15 04:59:12 PST
SVGFEImageElement doesn't support dynamic invalidation
Attachments
Patch
(303.77 KB, patch)
2010-11-15 05:49 PST
,
Renata Hodovan
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-11-15 05:49:05 PST
Created
attachment 73888
[details]
Patch
Andreas Kling
Comment 2
2010-11-15 06:55:42 PST
Comment on
attachment 73888
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73888&action=review
r=me
> LayoutTests/svg/dynamic-updates/script-tests/SVGFEImageElement-svgdom-preserveAspectRatio-prop.js:34 > +
Extra newline.
Dirk Schulze
Comment 3
2010-11-15 07:51:47 PST
I guess this does we do not support invalidatin if 'xlink:href' changes, can you add a FIXME please?
Renata Hodovan
Comment 4
2010-11-16 05:44:22 PST
This was landed in <
http://trac.webkit.org/changeset/72006
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug