WebCore: SVGFEImageElement doesn't support dynamic invalidation https://bugs.webkit.org/show_bug.cgi?id=49536

Patch by Renata Hodovan <reni@webkit.org> on 2010-11-15
Reviewed by Andreas Kling.

The dynamic changes are captured by the svgAttributeChanged function. Invalidate the filter primitive if necessary.

Tests: svg/dynamic-updates/SVGFEImageElement-dom-preserveAspectRatio-attr.html
       svg/dynamic-updates/SVGFEImageElement-svgdom-preserveAspectRatio-prop.html

* svg/SVGFEImageElement.cpp:
(WebCore::SVGFEImageElement::svgAttributeChanged):
* svg/SVGFEImageElement.h:

LayoutTests: SVGFEImageElement doesn't support dynamic invalidation, when attributes change.
https://bugs.webkit.org/show_bug.cgi?id=49536

Patch by Renata Hodovan <reni@webkit.org> on 2010-11-15
Reviewed by Andreas Kling.

Adding layout tests for feImage dynamic changes.

* platform/mac/svg/dynamic-updates/SVGFEImageElement-dom-preserveAspectRatio-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEImageElement-dom-preserveAspectRatio-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEImageElement-svgdom-preserveAspectRatio-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEImageElement-svgdom-preserveAspectRatio-prop-expected.png: Added.
* svg/dynamic-updates/SVGFEImageElement-dom-preserveAspectRatio-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEImageElement-dom-preserveAspectRatio-attr.html: Added.
* svg/dynamic-updates/SVGFEImageElement-svgdom-preserveAspectRatio-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEImageElement-svgdom-preserveAspectRatio-prop.html: Added.
* svg/dynamic-updates/script-tests/SVGFEImageElement-dom-preserveAspectRatio-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEImageElement-svgdom-preserveAspectRatio-prop.js: Added.
(executeTest):



Canonical link: https://commits.webkit.org/62477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72006 268f45cc-cd09-0410-ab3c-d52691b4dbfc